# policy-as-code

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
cli/: main.py
docs/: costs.csv
fact_graph/: __init__.py  engine.py  provenance.py  schema.py
pipeline/: __init__.py  cache.py  discovery.py  translation.py
tests/: synthetic_cases.py  test_engine.py  test_pipeline.py
tests/fixtures/: anthropic_responses.py  cfr_responses.py  fema_ia_graph.py
